# maturinIssueDemonstration

./: Cargo.toml  pyproject.toml
benches/: my_benchmark.rs
python/actag/: __init__.py  actag_src.py  tag_decoding.py  tag_parameters.py
src/: contours.rs  filters.rs  lib.rs  quad_fitting.rs  tag_detection.rs  tag_parameters.rs
tests/: test_cases.py  test_filters.rs  test_quad_fitting.rs  test_tag_detection.rs
